// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarIcon renders properly with variant selected 1`] = `
<div>
  [MockedStarSelectedSvg width="16" height="16" /]
</div>
`;

exports[`StarIcon renders properly with variant unselected 1`] = `
<div>
  [MockedStarUnselectedSvg width="16" height="16" /]
</div>
`;

exports[`StarIcon renders properly with variant void 1`] = `
<div>
  [MockedStarVoidSvg width="16" height="16" /]
</div>
`;
